webapp/webapps-deploy.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: webapp1
spec:
  selector:
    matchLabels:
      app: webapp1
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp1
    spec:
      containers:
      - name: webapp1
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: webapp2
spec:
  selector:
    matchLabels:
      app: webapp2
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp2
    spec:
      containers:
      - name: webapp2
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80

---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: webapp3
spec:
  selector:
    matchLabels:
      app: webapp3
  replicas: 1
  template:
    metadata:
      labels:
        app: webapp3
    spec:
      containers:
      - name: webapp3
        image: katacoda/docker-http-server:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-svc
  labels:
    app: webapp1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30081
  selector:
    app: webapp1
---
apiVersion: v1
kind: Service
metadata:
  name: webapp2-svc
  labels:
    app: webapp2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30082
  selector:
    app: webapp2
---
apiVersion: v1
kind: Service
metadata:
  name: webapp3-svc
  labels:
    app: webapp3
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30083
  selector:
    app: webapp3
